--- a/Lab2/Laboratorio2/.classpath
+++ b/Lab2/Laboratorio2/.classpath
@@ -16,6 +16,9 @@
 	<classpathentry kind="lib" path="libs/JUnitParams-1.0.5.jar"/>
 	<classpathentry kind="lib" path="libs/JUnitParams-1.0.5-sources.jar"/>
 	<classpathentry kind="lib" path="libs/mockito-core-4.8.1.jar"/>
-	<classpathentry kind="lib" path="libs/mockito-junit-jupiter-4.8.1.jar"/>
+	<classpathentry kind="lib" path="libs/mockito-all-1.10.19.jar"/>
+	<classpathentry kind="lib" path="libs/objenesis-3.2.jar"/>
+	<classpathentry kind="lib" path="libs/byte-buddy-1.12.16.jar"/>
+	<classpathentry kind="lib" path="libs/byte-buddy-agent-1.12.16.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
