--- a/Lab2/Laboratorio2/bin/.gitignore
+++ b/Lab2/Laboratorio2/bin/.gitignore
@@ -1,8 +1,11 @@
-/ejemplo/
-/ejercicios/
+/.project
 /A/
 /Agenda/
+/AgendaBreak/
 /B/
 /C/
-/AgendaBreak/
 /IllanesMorillasDaniel_GómezBodegoLaura_AlfonsoRojasSergioJosé.zip
+/Money/
+/bin/
+/ejemplo/
+/ejercicios/
